--- a/policy-jdk/alpine/src/main/docker/Dockerfile
+++ b/policy-jdk/alpine/src/main/docker/Dockerfile
@@ -23,7 +23,10 @@
 # $JAVA_HOME is set to /usr/lib/jvm/java-11-openjdk
 # more details at https://hub.docker.com/_/openjdk
 
-FROM onap/integration-python:10.1.0
+ARG INTEGRATION_PYTHON_NAME=${INTEGRATION_PYTHON_NAME}
+ARG INTEGRATION_PYTHON_VERSION=${INTEGRATION_PYTHON_VERSION}
+
+FROM ${INTEGRATION_PYTHON_NAME}:${INTEGRATION_PYTHON_VERSION}
 
 LABEL maintainer="Policy Team"
 LABEL org.opencontainers.image.title="Policy JDK Alpine"
