Support onap..tcagen2 v2.0.0 and mysql 8.x
Issue-ID: POLICY-4317
Signed-off-by: jhh <jorge.hernandez-herrero@att.com>
Change-Id: Idf1b05c11edd061cdd6f52e5051b7a6a0fd1884e
Signed-off-by: jhh <jorge.hernandez-herrero@att.com>

--- a/csit/config/api/apiParameters.yaml
+++ b/csit/config/api/apiParameters.yaml
@@ -40,6 +40,7 @@ database:
 policy-preload:
   policyTypes:
     - policytypes/onap.policies.monitoring.tcagen2.yaml
+    - policytypes/onap.policies.monitoring.tcagen2.v2.yaml
     - policytypes/onap.policies.monitoring.dcaegen2.collectors.datafile.datafile-app-server.yaml
     - policytypes/onap.policies.monitoring.dcae-restconfcollector.yaml
     - policytypes/onap.policies.monitoring.dcae-pm-subscription-handler.yaml
