Support onap..tcagen2 v2.0.0 and mysql 8.x
Issue-ID: POLICY-4317
Signed-off-by: jhh <jorge.hernandez-herrero@att.com>
Change-Id: Idf1b05c11edd061cdd6f52e5051b7a6a0fd1884e
Signed-off-by: jhh <jorge.hernandez-herrero@att.com>

--- a/csit/docker-compose-all.yml
+++ b/csit/docker-compose-all.yml
@@ -23,7 +23,7 @@ services:
       image: ${CONTAINER_LOCATION}mariadb:${POLICY_MARIADB_VER}
       container_name: mariadb
       hostname: mariadb
-      command: ['--lower-case-table-names=1', '--wait_timeout=28800']
+      command: ['--lower-case-table-names=1', '--wait_timeout=28800', '--default-authentication-plugin=mysql_native_password']
       env_file: ./config/db/db.conf
       volumes:
          - ./config/db:/docker-entrypoint-initdb.d:ro
