Convert CSIT tests to use HTTP rather than HTTPS
This commit converts the CSITs from HTTPS to HTTP. It also does some
refactoring and didying up on the CSIT environment.

Issue-ID: POLICY-4338
Change-Id: Ie19908a8d2a457df3ae5f4e490d5528889f395c8
Signed-off-by: liamfallon <liam.fallon@est.tech>

--- a/csit/config/clamp/KubernetesParticipantParameters.yaml
+++ b/csit/config/clamp/KubernetesParticipantParameters.yaml
@@ -26,14 +26,14 @@ participant:
             - ${topicServer:message-router}
           topicCommInfrastructure: dmaap
           fetchTimeout: 15000
-          useHttps: {{HTTPS_ENABLED}}
+          useHttps: false
       topicSinks:
         -
           topic: POLICY-ACRUNTIME-PARTICIPANT
           servers:
             - ${topicServer:message-router}
           topicCommInfrastructure: dmaap
-          useHttps: {{HTTPS_ENABLED}}
+          useHttps: false
 
 management:
   endpoints:
@@ -41,9 +41,9 @@ management:
       exposure:
         include: health, metrics, prometheus
 server:
-  port: 8083
+  port: 6969
   ssl:
-    enabled: {{HTTPS_ENABLED}}
+    enabled: false
   servlet:
     context-path: /onap/policy/clamp/acm/k8sparticipant
 
