--- a/csit/config/clamp/AcRuntimeParameters.yaml
+++ b/csit/config/clamp/AcRuntimeParameters.yaml
@@ -33,7 +33,7 @@ security:
 server:
   port: 6969
   ssl:
-    enabled: {{HTTPS_ENABLED}}
+    enabled: false
   error:
     path: /error
 
@@ -52,14 +52,14 @@ runtime:
           - ${topicServer:message-router}
         topicCommInfrastructure: dmaap
         fetchTimeout: 15000
-        useHttps: {{HTTPS_ENABLED}}
+        useHttps: false
     topicSinks:
       -
         topic: POLICY-ACRUNTIME-PARTICIPANT
         servers:
           - ${topicServer:message-router}
         topicCommInfrastructure: dmaap
-        useHttps: {{HTTPS_ENABLED}}
+        useHttps: false
 
 management:
   endpoints:
