--- a/csit/config/clamp/HttpParticipantParameters.yaml
+++ b/csit/config/clamp/HttpParticipantParameters.yaml
@@ -22,21 +22,21 @@ participant:
             - ${topicServer:message-router}
           topicCommInfrastructure: dmaap
           fetchTimeout: 15000
-          useHttps: {{HTTPS_ENABLED}}
+          useHttps: false
       topicSinks:
         - topic: POLICY-ACRUNTIME-PARTICIPANT
           servers:
             - ${topicServer:message-router}
           topicCommInfrastructure: dmaap
-          useHttps: {{HTTPS_ENABLED}}
+          useHttps: false
 management:
   endpoints:
     web:
       exposure:
         include: health, metrics, prometheus
 server:
-  port: 8084
+  port: 6969
   ssl:
-    enabled: {{HTTPS_ENABLED}}
+    enabled: false
   servlet:
     context-path: /onap/policy/clamp/acm/httpparticipant
