--- a/csit/config/clamp/application-smoke.properties
+++ b/csit/config/clamp/application-smoke.properties
@@ -148,10 +148,10 @@ clamp.config.httpclient.connectTimeout=10000
 
 #
 # Configuration Settings for Policy Engine Components
-clamp.config.policy.api.url={{PROTOCOL}}${POLICY_API_HOST}:6969
+clamp.config.policy.api.url=http://${POLICY_API_HOST}:6969
 clamp.config.policy.api.userName=policyadmin
 clamp.config.policy.api.password=zb!XztG34
-clamp.config.policy.pap.url={{PROTOCOL}}${POLICY_PAP_HOST}:6969
+clamp.config.policy.pap.url=http://${POLICY_PAP_HOST}:6969
 clamp.config.policy.pap.userName=policyadmin
 clamp.config.policy.pap.password=zb!XztG34
 
@@ -160,12 +160,12 @@ clamp.config.policy.pap.password=zb!XztG34
 clamp.config.sdc.csarFolder = /tmp/sdc-controllers
 
 #DCAE Inventory Url Properties
-clamp.config.dcae.inventory.url={{PROTOCOL}}localhost:8085
+clamp.config.dcae.inventory.url=http://localhost:8085
 clamp.config.dcae.intentory.retry.interval=10000
 clamp.config.dcae.intentory.retry.limit=5
 
 #DCAE Deployment Url Properties
-clamp.config.dcae.deployment.url={{PROTOCOL}}localhost:8085
+clamp.config.dcae.deployment.url=http://localhost:8085
 clamp.config.dcae.deployment.userName=test
 clamp.config.dcae.deployment.password=test
 
@@ -187,11 +187,11 @@ clamp.config.tosca.converter.default.datatypes=classpath:/clds/tosca-converter/d
 clamp.config.tosca.converter.dictionary.support.enabled=true
 
 # Configuration settings for CDS
-clamp.config.cds.url={{PROTOCOL}}cds-blueprints-processor-http:8080
+clamp.config.cds.url=http://cds-blueprints-processor-http:8080
 clamp.config.cds.userName=ccsdkapps
 clamp.config.cds.password=ccsdkapps
 
 # Configuration settings for ControlLoop Runtime Rest API
-clamp.config.acm.runtime.url={{PROTOCOL}}${RUNTIME_HOST}:6969
+clamp.config.acm.runtime.url=http://${RUNTIME_HOST}:6969
 clamp.config.acm.runtime.userName=runtimeUser
 clamp.config.acm.runtime.password=zb!XztG34
