Convert CSIT tests to use HTTP rather than HTTPS
THis commit converts the CSITs from HTTPS to HTTP.

Issue-ID: POLICY-4338
Change-Id: Ie19908a8d2a457df3ae5f4e490d5528889f395c8
Signed-off-by: liamfallon <liam.fallon@est.tech>

--- a/csit/config/drools-apps/env/base.conf
+++ b/csit/config/drools-apps/env/base.conf
@@ -61,7 +61,7 @@ AAF_HOST=aaf.api.simpledemo.onap.org
 
 # HTTP Servers
 
-HTTP_SERVER_HTTPS={{HTTPS_ENABLED}}
+HTTP_SERVER_HTTPS=false
 PROMETHEUS=true
 
 # LIVENESS Checks
@@ -108,7 +108,7 @@ DCAE_CONSUMER_GROUP=dcae.policy.shared
 # Open DMaaP
 
 DMAAP_SERVERS=message-router
-DMAAP_HTTPS={{HTTPS_ENABLED}}
+DMAAP_HTTPS=false
 
 # AAI
 
