--- a/csit/config/drools/env/base.conf
+++ b/csit/config/drools/env/base.conf
@@ -59,7 +59,7 @@ AAF_HOST=aaf.api.simpledemo.onap.org
 
 # HTTP Servers
 
-HTTP_SERVER_HTTPS={{HTTPS_ENABLED}}
+HTTP_SERVER_HTTPS=false
 PROMETHEUS=true
 
 # PDP-D DMaaP configuration channel
@@ -104,7 +104,7 @@ DCAE_CONSUMER_GROUP=dcae.policy.shared
 # Open DMaaP
 
 DMAAP_SERVERS=mr.api.simpledemo.onap.org
-DMAAP_HTTPS={{HTTPS_ENABLED}}
+DMAAP_HTTPS=false
 
 # AAI
 
