--- a/policy-db-migrator/pom.xml
+++ b/policy-db-migrator/pom.xml
@@ -42,6 +42,8 @@
         <docker.skip.push>false</docker.skip.push>
         <maven.build.timestamp.format>yyyyMMdd'T'HHmm</maven.build.timestamp.format>
         <docker.dbm.imagename>onap/policy-db-migrator</docker.dbm.imagename>
+        <docker.dbm.dockerFile>Dockerfile</docker.dbm.dockerFile>
+        <docker.dbm.contextDir>${project.basedir}/src/main/docker</docker.dbm.contextDir>
     </properties>
 
     <build>
@@ -81,7 +83,8 @@
                             <name>${docker.dbm.imagename}</name>
                             <build>
                                 <cleanup>try</cleanup>
-                                <dockerFile>Dockerfile</dockerFile>
+                                <dockerFile>${docker.dbm.dockerFile}</dockerFile>
+                                <contextDir>${docker.dbm.contextDir}</contextDir>
                                 <tags>
                                     <tag>${project.version}</tag>
                                     <tag>${project.version}-${maven.build.timestamp}</tag>
