Fix docker-compose for gui smoke testing
Running gui smoke testing script fails due to
keystore and truststore volume mounts for https.
CSITs are updated to use HTTP.

Issue-ID: POLICY-4328
Signed-off-by: zrrmmua <ramesh.murugan.iyer@est.tech>
Change-Id: Ia6f7869e62f410f1e020d5a8544d3f9b58e5a0be

--- a/csit/config/gui/application.yaml
+++ b/csit/config/gui/application.yaml
@@ -16,19 +16,14 @@
 # ============LICENSE_END=====================================================
 #
 server:
-  port: 2443
+  port: 2445
   ssl:
     enabled: false
     enabled-protocols: TLSv1.2
-    client-auth: want
-    key-store: file:${KEYSTORE}
-    key-store-password: ${KEYSTORE_PASSWD}
-    trust-store: file:${TRUSTSTORE}
-    trust-store-password: ${TRUSTSTORE_PASSWD}
 
 clamp:
-  url: https://policy-clamp-be:8443
-  disable-ssl-validation: false
+  url: http://policy-clamp-be:8445
+  disable-ssl-validation: true
   disable-ssl-hostname-check: true
 
 apex-editor:
