--- a/csit/docker-compose-gui-smoke.yml
+++ b/csit/docker-compose-gui-smoke.yml
@@ -64,14 +64,12 @@ services:
                   - vfc-sim
       volumes:
        - ./config/sim-all:/opt/app/policy/simulators/etc/mounted:ro
-       - ./config/ks.jks:/opt/app/policy/simulators/etc/ssl/policy-keystore:ro
-       - ./config/policy-truststore:/opt/app/policy/simulators/etc/ssl/policy-truststore:ro
       expose:
        - 6666
        - 6668
        - 6669
        - 6670
-       - 3905
+       - 3904
        - 6680
    api:
       image: nexus3.onap.org:10001/onap/policy-api:${POLICY_API_VERSION}
@@ -79,11 +77,10 @@ services:
       depends_on:
        - policy-db-migrator
       hostname: policy-api
-      expose:
-       - 6969
+      ports:
+       - 30440:6969
       volumes:
-       - ./config/ks.jks:/opt/app/policy/api/etc/ssl/policy-keystore:ro
-       - ./config/policy-truststore:/opt/app/policy/api/etc/ssl/policy-truststore:ro
+       - ./config/api/apiParameters.yaml:/opt/app/policy/api/etc/apiParameters.yaml:ro
        - ./wait_for_port.sh:/opt/app/policy/api/bin/wait_for_port.sh:ro
       entrypoint: ./wait_for_port.sh
       command: [
@@ -99,19 +96,17 @@ services:
        - simulator
        - api
       hostname: policy-pap
-      expose:
-       - 6969
+      ports:
+       - 30442:6969
       volumes:
        - ./config/pap/papParameters.yaml:/opt/app/policy/pap/etc/papParameters.yaml:ro
        - ./config/pap/groups.json:/opt/app/policy/pap/etc/mounted/groups.json:ro
-       - ./config/ks.jks:/opt/app/policy/pap/etc/ssl/policy-keystore:ro
-       - ./config/policy-truststore:/opt/app/policy/pap/etc/ssl/policy-truststore:ro
        - ./wait_for_port.sh:/opt/app/policy/pap/bin/wait_for_port.sh:ro
       entrypoint: ./wait_for_port.sh
       command: [
         '-c', './policy-pap.sh',
         'mariadb', '3306',
-        'message-router', '3905',
+        'message-router', '3904',
         'api', '6969'
         ]
    xacml-pdp:
@@ -122,18 +117,16 @@ services:
        - simulator
        - pap
       hostname: policy-xacml-pdp
-      expose:
-       - 6969
+      ports:
+       - 30441:6969
       volumes:
        - ./config/xacml-pdp/defaultConfig.json:/opt/app/policy/pdpx/etc/defaultConfig.json:ro
-       - ./config/ks.jks:/opt/app/policy/pdpx/etc/ssl/policy-keystore:ro
-       - ./config/policy-truststore:/opt/app/policy/pdpx/etc/ssl/policy-truststore:ro
        - ./wait_for_port.sh:/opt/app/policy/pdpx/bin/wait_for_port.sh:ro
       entrypoint: ./wait_for_port.sh
       command: [
         '-c', './policy-pdpx.sh',
         'mariadb', '3306',
-        'message-router', '3905',
+        'message-router', '3904',
         'pap', '6969'
         ]
    drools:
@@ -144,19 +137,19 @@ services:
        - simulator
        - pap
       hostname: drools
-      expose:
-       - 6969
-       - 9696
+      ports:
+        - 30217:6969
+        - 30216:9696
       volumes:
        - ./config/drools/custom:/tmp/policy-install/config:ro
        - ./wait_for_port.sh:/opt/app/policy/bin/wait_for_port.sh:ro
       env_file:
-        - ./config/drools/env/base.conf
+        - ./config/drools-pdp/env/base.conf
       entrypoint: /opt/app/policy/bin/wait_for_port.sh
       command: [
         '-c', '/opt/app/policy/bin/pdpd-entrypoint.sh boot',
         'mariadb', '3306',
-        'message-router', '3905'
+        'message-router', '3904'
         ]
    drools-apps:
       image: nexus3.onap.org:10001/onap/policy-pdpd-cl:${POLICY_DROOLS_APPS_VERSION}
@@ -167,21 +160,21 @@ services:
        - pap
        - xacml-pdp
       hostname: drools-apps
-      expose:
-       - 6969
-       - 9696
+      ports:
+        - 30221:6969
+        - 30219:9696
       volumes:
        - ./config/drools-apps/custom:/tmp/policy-install/config:ro
        - ./wait_for_port.sh:/opt/app/policy/bin/wait_for_port.sh:ro
       env_file:
-        - ./config/drools-apps/env/base.conf
-        - ./config/drools-apps/env/feature-healthcheck.conf
-        - ./config/drools-apps/env/feature-pooling-dmaap.conf
+        - ./config/drools-applications/env/base.conf
+        - ./config/drools-applications/env/feature-healthcheck.conf
+        - ./config/drools-applications/env/feature-pooling-dmaap.conf
       entrypoint: /opt/app/policy/bin/wait_for_port.sh
       command: [
         '-c', '/opt/app/policy/bin/pdpd-cl-entrypoint.sh boot',
         'mariadb', '3306',
-        'message-router', '3905',
+        'message-router', '3904',
         'pap', '6969',
         'aai-sim', '6666',
         'sdnc-sim', '6668',
@@ -196,19 +189,16 @@ services:
        - simulator
        - pap
       hostname: policy-apex-pdp
-      expose:
-       - 6969
-       - 23324
+      ports:
+        - 30237:6969
       volumes:
        - ./config/apex-pdp/OnapPfConfig.json:/opt/app/policy/apex-pdp/etc/onappf/config/OnapPfConfig.json:ro
-       - ./config/ks.jks:/opt/app/policy/apex-pdp/etc/ssl/policy-keystore:ro
-       - ./config/policy-truststore:/opt/app/policy/apex-pdp/etc/ssl/policy-truststore:ro
        - ./wait_for_port.sh:/opt/app/policy/bin/wait_for_port.sh:ro
       entrypoint: /opt/app/policy/bin/wait_for_port.sh
       command: [
         '-c', '/opt/app/policy/apex-pdp/bin/apexOnapPf.sh -c /opt/app/policy/apex-pdp/etc/onappf/config/OnapPfConfig.json',
         'mariadb', '3306',
-        'message-router', '3905',
+        'message-router', '3904',
         'pap', '6969'
         ]
    distribution:
@@ -222,15 +212,13 @@ services:
       hostname: policy-distribution
       volumes:
        - ./config/distribution/defaultConfig.json:/opt/app/policy/distribution/etc/defaultConfig.json:ro
-       - ./config/ks.jks:/opt/app/policy/distribution/etc/ssl/policy-keystore:ro
-       - ./config/policy-truststore:/opt/app/policy/distribution/etc/ssl/policy-truststore:ro
        - ./distribution/config/temp/:/opt/app/policy/distribution/etc/temp/:ro
        - ./wait_for_port.sh:/opt/app/policy/bin/wait_for_port.sh:ro
       entrypoint: /opt/app/policy/bin/wait_for_port.sh
       command: [
         '-c', './policy-dist.sh',
         'mariadb', '3306',
-        'message-router', '3905',
+        'message-router', '3904',
         'pap', '6969',
         'apex-pdp', '6969'
         ]
@@ -244,17 +232,15 @@ services:
        - policy-clamp-ac-k8s-ppnt
        - policy-clamp-ac-pf-ppnt
       hostname: policy-clamp-runtime-acm
-      expose:
-       - 6969
+      ports:
+        - 30258:6969
       volumes:
-       - ./config/policy-truststore:/opt/app/policy/clamp/etc/ssl/policy-truststore:ro
        - ./wait_for_port.sh:/opt/app/policy/bin/wait_for_port.sh:ro
-       - ./config/ks.jks:/opt/app/policy/clamp/etc/ssl/policy-keystore:ro
-       - ./config/clamp/AcRuntimeParameters.yaml:/opt/app/policy/clamp/config/AcRuntimeParameters.yaml
+       - ./config/clamp/AcRuntimeParameters.yaml:/opt/app/policy/clamp/etc/AcRuntimeParameters.yaml
       entrypoint: /opt/app/policy/bin/wait_for_port.sh
       command: [
         '-c', './acm-runtime.sh',
-        'message-router', '3905'
+        'message-router', '3904'
         ]
    policy-clamp-ac-http-ppnt:
       image: nexus3.onap.org:10001/onap/policy-clamp-ac-http-ppnt:${POLICY_CLAMP_VERSION}
@@ -262,16 +248,15 @@ services:
       depends_on:
        - simulator
       hostname: policy-clamp-ac-http-ppnt
-      expose:
-       - 6971
+      ports:
+        - 30290:6969
       volumes:
-       - ./config/policy-truststore:/opt/app/policy/clamp/etc/ssl/policy-truststore:ro
+       - ./config/clamp/HttpParticipantParameters.yaml:/opt/app/policy/clamp/etc/HttpParticipantParameters.yaml
        - ./wait_for_port.sh:/opt/app/policy/bin/wait_for_port.sh:ro
-       - ./config/ks.jks:/opt/app/policy/clamp/etc/ssl/policy-keystore:ro
       entrypoint: /opt/app/policy/bin/wait_for_port.sh
       command: [
         '-c', './http-participant.sh',
-        'message-router', '3905'
+        'message-router', '3904'
         ]
    policy-clamp-ac-k8s-ppnt:
       image: nexus3.onap.org:10001/onap/policy-clamp-ac-k8s-ppnt:${POLICY_CLAMP_VERSION}
@@ -279,16 +264,15 @@ services:
       depends_on:
        - simulator
       hostname: policy-clamp-ac-k8s-ppnt
-      expose:
-       - 6972
+      ports:
+        - 30295:6969
       volumes:
-       - ./config/policy-truststore:/opt/app/policy/clamp/etc/ssl/policy-truststore:ro
+       - ./config/clamp/KubernetesParticipantParameters.yaml:/opt/app/policy/clamp/etc/KubernetesParticipantParameters.yaml
        - ./wait_for_port.sh:/opt/app/policy/bin/wait_for_port.sh:ro
-       - ./config/ks.jks:/opt/app/policy/clamp/etc/ssl/policy-keystore:ro
       entrypoint: /opt/app/policy/bin/wait_for_port.sh
       command: [
         '-c', './kubernetes-participant.sh',
-        'message-router', '3905'
+        'message-router', '3904'
         ]
    policy-clamp-ac-pf-ppnt:
       image: nexus3.onap.org:10001/onap/policy-clamp-ac-pf-ppnt:${POLICY_CLAMP_VERSION}
@@ -297,17 +281,15 @@ services:
        - simulator
        - api
       hostname: policy-clamp-ac-pf-ppnt
-      expose:
-       - 6973
+      ports:
+        - 30218:6969
       volumes:
-       - ./config/policy-truststore:/opt/app/policy/clamp/etc/ssl/policy-truststore:ro
        - ./wait_for_port.sh:/opt/app/policy/bin/wait_for_port.sh:ro
-       - ./config/ks.jks:/opt/app/policy/clamp/etc/ssl/policy-keystore:ro
-       - ./config/clamp/PolicyParticipantParameters.yaml:/opt/app/policy/clamp/config/PolicyParticipantParameters.yaml:ro
+       - ./config/clamp/PolicyParticipantParameters.yaml:/opt/app/policy/clamp/etc/PolicyParticipantParameters.yaml:ro
       entrypoint: /opt/app/policy/bin/wait_for_port.sh
       command: [
         '-c', './policy-participant.sh',
-        'message-router', '3905'
+        'message-router', '3904'
         ]
 
    policy-gui:
@@ -317,19 +299,14 @@ services:
      - policy-clamp-backend
      hostname: policy-gui
      environment:
-       CLAMP_URL: https://policy-clamp-backend:8443
+       CLAMP_URL: http://policy-clamp-backend:8445
        CLAMP_DISABLE_SSL_VALIDATION: "true"
-       SERVER_SSL_CLIENT_AUTH: want
-       KEYSTORE_PASSWD: Pol1cy_0nap
-       TRUSTSTORE_PASSWD: Pol1cy_0nap
      ports:
-     - "2443:2443"
+     - "2445:2445"
      expose:
-     - 2443
+     - 2445
      volumes:
      - ./config/gui/application.yaml:/opt/app/policy/gui/etc/application.yaml
-     - ./config/policy-truststore:/opt/app/policy/gui/etc/mounted/policy-truststore:ro
-     - ./config/ks.jks:/opt/app/policy/gui/etc/mounted/policy-keystore:ro
      - ./wait_for_port.sh:/opt/app/policy/gui/bin/wait_for_port.sh:ro
      entrypoint: ./policy-gui.sh
      working_dir: /opt/app/policy/gui/bin
@@ -348,13 +325,10 @@ services:
         MARIADB_HOST: mariadb
         RUNTIME_HOST: policy-clamp-runtime-acm
      ports:
-     - "8443:8443"
+     - "8445:8445"
      expose:
-     - 8443
+     - 8445
      volumes:
      - ./config/clamp/application-smoke.properties:/opt/policy/clamp/application-smoke.properties:ro
-     - ./config/policy-truststore:/opt/policy/clamp/policy-truststore:ro
-     - ./config/ks.jks:/opt/policy/clamp/policy-keystore:ro
-     - ./config/clamp/org.onap.clamp.keyfile:/opt/policy/clamp/clamp-be-keyfile:ro
      working_dir: /opt/policy/clamp
      command: java -Djava.security.egd=file:/dev/./urandom -XX:MinRAMPercentage=50 -XX:MaxRAMPercentage=75 -jar ./policy-clamp-backend.jar --spring.config.name=application-smoke --spring.config.location=optional:classpath:/,optional:classpath:/config/,optional:file:./,optional:file:./config/
