Improve debugging support for CSITs
The following improvements are added:
- "docker ps" command added to the wait_for_port.sh script
  tp show status of the containers coming up and down
- "docker-compose logs" added to the end of the test runs
  to print out the standard output from the containers
- Add standard output logging to all containers
- Some cleanup and use of better names

Issue-ID: POLICY-4350
Change-Id: I3ae8c59dba64f9c267f310366bb4a2a6ffd5d418
Signed-off-by: liamfallon <liam.fallon@est.tech>

--- a/csit/config/clamp/ClampBackend.properties
+++ b/csit/config/clamp/ClampBackend.properties
@@ -44,11 +44,11 @@
 ### HTTPS Example:
 ### --------------
 ### server.port=8443
-server.ssl.key-store=file:/opt/policy/clamp/policy-keystore
-server.ssl.key-store-password=enc:qWxBtY7w9h5Hl72vQKgI5G1qqyRIuBarQqMkVDHqZmd
-server.ssl.key-password=enc:qWxBtY7w9h5Hl72vQKgI5G1qqyRIuBarQqMkVDHqZmd
-server.ssl.key-store-type=jks
-server.port=8443
+#server.ssl.key-store=file:/opt/policy/clamp/policy-keystore
+#server.ssl.key-store-password=enc:qWxBtY7w9h5Hl72vQKgI5G1qqyRIuBarQqMkVDHqZmd
+#server.ssl.key-password=enc:qWxBtY7w9h5Hl72vQKgI5G1qqyRIuBarQqMkVDHqZmd
+#server.ssl.key-store-type=jks
+server.port=8445
 ## Config part for Server certificates
 # Can be a classpath parameter instead of file:/
 #server.ssl.key-store=classpath:/clds/aaf/org.onap.clamp.p12
@@ -56,22 +56,22 @@ server.port=8443
 #server.ssl.key-password=enc:YZs7M6IftyPjHniTa6J7G2416hssb8qI-Av8D1b8pPS
 
 ## Config part for Client certificates
-server.ssl.client-auth=want
+#server.ssl.client-auth=want
 #server.ssl.trust-store=classpath:/clds/aaf/truststoreONAPall.jks
 #server.ssl.trust-store-password=enc:iDnPBBLq_EMidXlMa1FEuBR8TZzYxrCg66vq_XfLHdJ
-server.ssl.trust-store=file:/opt/policy/clamp/policy-truststore
-server.ssl.trust-store-password=enc:qWxBtY7w9h5Hl72vQKgI5G1qqyRIuBarQqMkVDHqZmd
+#server.ssl.trust-store=file:/opt/policy/clamp/policy-truststore
+#server.ssl.trust-store-password=enc:qWxBtY7w9h5Hl72vQKgI5G1qqyRIuBarQqMkVDHqZmd
 
 # The key file used to decode the key store and trust store password
 # If not defined, the key store and trust store password will not be decrypted
 #clamp.config.keyFile=classpath:/clds/aaf/org.onap.clamp.keyfile
-clamp.config.keyFile=file:/opt/policy/clamp/clamp-be-keyfile
+#clamp.config.keyFile=file:/opt/policy/clamp/clamp-be-keyfile
 
-#server.http-to-https-redirection.port=8080
+server.http-to-https-redirection.port=8080
 
 server.servlet.context-path=/
 #Modified engine-rest applicationpath
-spring.profiles.active=clamp-default,clamp-default-user,clamp-sdc-controller,clamp-ssl-config,clamp-policy-controller,default-dictionary-elements
+spring.profiles.active=clamp-default,clamp-default-user,clamp-policy-controller,default-dictionary-elements
 spring.http.converters.preferred-json-mapper=gson
 
 #The max number of active threads in this pool
@@ -134,10 +134,10 @@ async.max.pool.size=20
 async.queue.capacity=500
 
 #For logback file
-#clamp.config.logback.path=
-clamp.config.logback.filename=logback-default.xml
+clamp.config.logback.path=/opt/policy/clamp/config
+clamp.config.logback.filename=logback.xml
 #The log folder that will be used in logback.xml file
-clamp.config.log.path=/var/log/onap/clamp
+clamp.config.log.path=/var/log/onap/policy/clamp
 clamp.config.files.systemProperties=classpath:/system.properties
 clamp.config.files.cldsUsers=classpath:/clds/clds-users.json
 clamp.config.files.globalProperties=classpath:/clds/templates/globalProperties.json
