--- a/csit/docker-compose-all.yml
+++ b/csit/docker-compose-all.yml
@@ -24,12 +24,12 @@ services:
       container_name: mariadb
       hostname: mariadb
       command: ['--lower-case-table-names=1', '--wait_timeout=28800']
-      env_file: config/db/db.conf
+      env_file: ./config/db/db.conf
       volumes:
          - ./config/db:/docker-entrypoint-initdb.d:ro
          - ./config/clamp/policy-clamp-create-tables.sql:/tmp/policy-clamp-create-tables.sql
-      expose:
-       - 3306
+      ports:
+       - 3306:3306
    policy-db-migrator:
       image: ${CONTAINER_LOCATION}onap/policy-db-migrator:${POLICY_DOCKER_VERSION}
       container_name: policy-db-migrator
@@ -38,7 +38,7 @@ services:
         - mariadb
       expose:
        - 6824
-      env_file: config/db/db.conf
+      env_file: ./config/db/db.conf
       environment:
         SQL_DB: policyadmin
         SQL_HOST: mariadb
@@ -66,6 +66,7 @@ services:
                   - vfc-sim
       volumes:
        - ./config/sim-all:/opt/app/policy/simulators/etc/mounted:ro
+       - ./config/sim-all/logback.xml:/opt/app/policy/simulators/etc/mounted/logback.xml:ro
       expose:
        - 6666
        - 6668
@@ -83,6 +84,7 @@ services:
        - 30440:6969
       volumes:
        - ./config/api/apiParameters.yaml:/opt/app/policy/api/etc/apiParameters.yaml:ro
+       - ./config/api/logback.xml:/opt/app/policy/api/etc/logback.xml:ro
        - ./wait_for_port.sh:/opt/app/policy/api/bin/wait_for_port.sh:ro
       entrypoint: ./wait_for_port.sh
       command: [
@@ -103,6 +105,7 @@ services:
       volumes:
        - ./config/pap/papParameters.yaml:/opt/app/policy/pap/etc/papParameters.yaml:ro
        - ./config/${PROJECT}/groups.json:/opt/app/policy/pap/etc/mounted/groups.json:ro
+       - ./config/pap/logback.xml:/opt/app/policy/pap/etc/logback.xml:ro
        - ./wait_for_port.sh:/opt/app/policy/pap/bin/wait_for_port.sh:ro
       entrypoint: ./wait_for_port.sh
       command: [
@@ -123,7 +126,7 @@ services:
        - 30441:6969
       volumes:
        - ./config/xacml-pdp/defaultConfig.json:/opt/app/policy/pdpx/etc/defaultConfig.json:ro
-       - ./config/xacml-pdp/groups.json:/opt/app/policy/pdpx/etc/groups.json:ro
+       - ./config/xacml-pdp/logback.xml:/opt/app/policy/pdpx/etc/logback.xml:ro
        - ./wait_for_port.sh:/opt/app/policy/pdpx/bin/wait_for_port.sh:ro
       entrypoint: ./wait_for_port.sh
       command: [
@@ -147,7 +150,7 @@ services:
        - ./config/drools-pdp/custom:/tmp/policy-install/config:ro
        - ./wait_for_port.sh:/opt/app/policy/bin/wait_for_port.sh:ro
       env_file:
-        - config/drools-pdp/env/base.conf
+        - ./config/drools-pdp/env/base.conf
       entrypoint: /opt/app/policy/bin/wait_for_port.sh
       command: [
         '-c', '/opt/app/policy/bin/pdpd-entrypoint.sh boot',
@@ -170,9 +173,9 @@ services:
        - ./config/drools-applications/custom:/tmp/policy-install/config:ro
        - ./wait_for_port.sh:/opt/app/policy/bin/wait_for_port.sh:ro
       env_file:
-        - config/drools-applications/env/base.conf
-        - config/drools-applications/env/feature-healthcheck.conf
-        - config/drools-applications/env/feature-pooling-dmaap.conf
+        - ./config/drools-applications/env/base.conf
+        - ./config/drools-applications/env/feature-healthcheck.conf
+        - ./config/drools-applications/env/feature-pooling-dmaap.conf
       entrypoint: /opt/app/policy/bin/wait_for_port.sh
       command: [
         '-c', '/opt/app/policy/bin/pdpd-cl-entrypoint.sh boot',
@@ -196,6 +199,7 @@ services:
        - 30237:6969
       volumes:
        - ./config/apex-pdp/OnapPfConfig.json:/opt/app/policy/apex-pdp/etc/onappf/config/OnapPfConfig.json:ro
+       - ./config/apex-pdp/logback.xml:/opt/app/policy/apex-pdp/etc/logback.xml:ro
        - ./wait_for_port.sh:/opt/app/policy/bin/wait_for_port.sh:ro
       entrypoint: /opt/app/policy/bin/wait_for_port.sh
       command: [
@@ -216,6 +220,7 @@ services:
       volumes:
        - ./config/distribution/defaultConfig.json:/opt/app/policy/distribution/etc/defaultConfig.json:ro
        - ./distribution/config/temp/:/opt/app/policy/distribution/etc/temp/:ro
+       - ./config/distribution/logback.xml:/opt/app/policy/distribution/etc/logback.xml:ro
        - ./wait_for_port.sh:/opt/app/policy/bin/wait_for_port.sh:ro
       entrypoint: /opt/app/policy/bin/wait_for_port.sh
       command: [
@@ -236,6 +241,7 @@ services:
        - 30258:6969
       volumes:
        - ./config/clamp/AcRuntimeParameters.yaml:/opt/app/policy/clamp/etc/AcRuntimeParameters.yaml
+       - ./config/clamp/logback.xml:/opt/app/policy/clamp/etc/logback.xml:ro
        - ./wait_for_port.sh:/opt/app/policy/bin/wait_for_port.sh:ro
       entrypoint: /opt/app/policy/bin/wait_for_port.sh
       command: [
@@ -245,31 +251,35 @@ services:
    policy-clamp-ac-http-ppnt:
       image: ${CONTAINER_LOCATION}onap/policy-clamp-ac-http-ppnt:${POLICY_CLAMP_VERSION}
       container_name: policy-clamp-ac-http-ppnt
+      depends_on:
+       - simulator
       hostname: policy-clamp-ac-http-ppnt
       ports:
        - 30290:6969
       volumes:
        - ./config/clamp/HttpParticipantParameters.yaml:/opt/app/policy/clamp/etc/HttpParticipantParameters.yaml
+       - ./config/clamp/logback.xml:/opt/app/policy/clamp/etc/logback.xml:ro
        - ./wait_for_port.sh:/opt/app/policy/bin/wait_for_port.sh:ro
       entrypoint: /opt/app/policy/bin/wait_for_port.sh
       command: [
         '-c', './http-participant.sh',
-        'policy-clamp-runtime-acm', '6969',
         'message-router', '3904'
         ]
    policy-clamp-ac-k8s-ppnt:
       image: ${CONTAINER_LOCATION}onap/policy-clamp-ac-k8s-ppnt:${POLICY_CLAMP_VERSION}
       container_name: policy-clamp-ac-k8s-ppnt
+      depends_on:
+       - simulator
       hostname: policy-clamp-ac-k8s-ppnt
       ports:
        - 30295:6969
       volumes:
        - ./config/clamp/KubernetesParticipantParameters.yaml:/opt/app/policy/clamp/etc/KubernetesParticipantParameters.yaml
+       - ./config/clamp/logback.xml:/opt/app/policy/clamp/etc/logback.xml:ro
        - ./wait_for_port.sh:/opt/app/policy/bin/wait_for_port.sh:ro
       entrypoint: /opt/app/policy/bin/wait_for_port.sh
       command: [
         '-c', './kubernetes-participant.sh',
-        'policy-clamp-runtime-acm', '6969',
         'message-router', '3904'
         ]
    policy-clamp-ac-pf-ppnt:
@@ -283,10 +293,53 @@ services:
        - 30218:6969
       volumes:
        - ./config/clamp/PolicyParticipantParameters.yaml:/opt/app/policy/clamp/etc/PolicyParticipantParameters.yaml:ro
+       - ./config/clamp/logback.xml:/opt/app/policy/clamp/etc/logback.xml:ro
        - ./wait_for_port.sh:/opt/app/policy/bin/wait_for_port.sh:ro
       entrypoint: /opt/app/policy/bin/wait_for_port.sh
       command: [
         '-c', './policy-participant.sh',
-        'policy-clamp-runtime-acm', '6969',
         'message-router', '3904'
         ]
+   policy-gui:
+     image: ${CONTAINER_LOCATION}onap/policy-gui:latest
+     container_name: policy-gui
+     depends_on:
+      - policy-clamp-backend
+     hostname: policy-gui
+     environment:
+       CLAMP_URL: http://policy-clamp-backend:8445
+       CLAMP_DISABLE_SSL_VALIDATION: "true"
+     ports:
+      - 2445:2445
+     volumes:
+      - ./config/policy-gui/application.yaml:/opt/app/policy/gui/etc/application.yml
+      - ./config/policy-gui/logback.xml:/opt/app/policy/gui/etc/logback.xml:ro
+      - ./wait_for_port.sh:/opt/app/policy/gui/bin/wait_for_port.sh:ro
+     entrypoint: ./policy-gui.sh
+     working_dir: /opt/app/policy/gui/bin
+     command: ./policy-gui.sh
+   policy-clamp-backend:
+     image: ${CONTAINER_LOCATION}onap/policy-clamp-backend:${POLICY_CLAMP_VERSION}
+     container_name: policy-clamp-backend
+     depends_on:
+      - policy-clamp-runtime-acm
+      - distribution
+     hostname: policy-clamp-backend
+     environment:
+        POLICY_API_HOST: api
+        POLICY_PAP_HOST: pap
+        MARIADB_HOST: mariadb
+        RUNTIME_HOST: policy-clamp-runtime-acm
+     ports:
+      - 8445:8445
+     volumes:
+      - ./config/clamp/ClampBackend.properties:/opt/policy/clamp/config/ClampBackend.properties:ro
+      - ./config/clamp/logback-backend.xml:/opt/policy/clamp/config/logback.xml:ro
+     working_dir: /opt/policy/clamp
+     command: java
+      -Djava.security.egd=file:/dev/./urandom
+      -XX:MinRAMPercentage=50
+      -XX:MaxRAMPercentage=75
+      -jar ./policy-clamp-backend.jar
+      --spring.config.name=ClampBackend
+      --spring.config.location=/opt/policy/clamp/config/ClampBackend.properties
