--- a/csit/config/drools-pdp/env/base.conf
+++ b/csit/config/drools-pdp/env/base.conf
@@ -1,7 +1,7 @@
-# ============LICENSE_START==================================================
+# ============LICENSE_START=======================================================
 # Copyright (C) 2020-2021 AT&T Intellectual Property. All rights reserved.
 # Modifications Copyright (C) 2021 Bell Canada. All rights reserved.
-# ===========================================================================
+# ================================================================================
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -13,7 +13,7 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-# ============LICENSE_END====================================================
+# ============LICENSE_END=========================================================
 
 # JVM options
 
@@ -36,13 +36,13 @@ TELEMETRY_PASSWORD=demo123456!
 
 # nexus repository
 
-SNAPSHOT_REPOSITORY_ID=
-SNAPSHOT_REPOSITORY_URL=
-RELEASE_REPOSITORY_ID=
-RELEASE_REPOSITORY_URL=
-REPOSITORY_USERNAME=
-REPOSITORY_PASSWORD=
-REPOSITORY_OFFLINE=true
+SNAPSHOT_REPOSITORY_ID=policy-nexus-snapshots
+SNAPSHOT_REPOSITORY_URL=http://nexus:8081/nexus/content/repositories/snapshots/
+RELEASE_REPOSITORY_ID=policy-nexus-releases
+RELEASE_REPOSITORY_URL=http://nexus:8081/nexus/content/repositories/releases/
+REPOSITORY_USERNAME=admin
+REPOSITORY_PASSWORD=admin123
+REPOSITORY_OFFLINE=false
 
 # Relational (SQL) DB access
 
@@ -59,12 +59,8 @@ AAF_HOST=aaf.api.simpledemo.onap.org
 
 # HTTP Servers
 
-HTTP_SERVER_HTTPS={{HTTPS_ENABLED}}
+HTTP_SERVER_HTTPS=false
 PROMETHEUS=true
-
-# LIVENESS Checks
-
-LIVENESS_CONTROLLERS=*
 
 # PDP-D DMaaP configuration channel
 
@@ -83,60 +79,62 @@ POLICY_PDP_PAP_API_SECRET=
 
 # PAP
 
-PAP_HOST=policy-pap
-PAP_USERNAME=policyadmin
-PAP_PASSWORD=zb!XztG34
+PAP_HOST=
+PAP_USERNAME=
+PAP_PASSWORD=
 
 # PDP-X
 
-GUARD_DISABLED=false
-PDP_HOST=policy-xacml-pdp
-PDP_PORT=6969
+PDP_HOST=
+PDP_PORT=
 PDP_CONTEXT_URI=policy/pdpx/v1/
-PDP_USERNAME=healthcheck
-PDP_PASSWORD=zb!XztG34
-
+PDP_USERNAME=
+PDP_PASSWORD=
+PDP_CLIENT_USERNAME=
+PDP_CLIENT_PASSWORD=
+PDP_ENVIRONMENT=
+GUARD_DISABLED=false
 
 # DCAE DMaaP
 
 DCAE_TOPIC=unauthenticated.DCAE_CL_OUTPUT
-DCAE_SERVERS=message-router
+DCAE_SERVERS=
 DCAE_CONSUMER_GROUP=dcae.policy.shared
 
 # Open DMaaP
 
-DMAAP_SERVERS=message-router
-DMAAP_HTTPS={{HTTPS_ENABLED}}
+DMAAP_SERVERS=mr.api.simpledemo.onap.org
+DMAAP_HTTPS=false
 
 # AAI
 
-AAI_HOST=aai-sim
-AAI_PORT=6666
+AAI_HOST=aai.api.simpledemo.onap.org
+AAI_PORT=8443
 AAI_CONTEXT_URI=
 AAI_USERNAME=policy@policy.onap.org
 AAI_PASSWORD=demo123456!
 
 # MSO
 
-SO_HOST=so-sim
-SO_PORT=6669
-SO_CONTEXT_URI=
-SO_URL=https://message-router:6669/
+SO_HOST=vm1.mso.simpledemo.onap.org
+SO_PORT=8080
+SO_CONTEXT_URI=onap/so/infra/
+SO_URL=http://vm1.mso.simpledemo.onap.org:8080/onap/so/infra
 SO_USERNAME=InfraPortalClient
 SO_PASSWORD=password1$
 
 # VFC
 
-VFC_HOST=vfc-sim
-VFC_PORT=6670
-VFC_CONTEXT_URI=
+VFC_HOST=
+VFC_PORT=
+VFC_CONTEXT_URI=api/nslcm/v1/
 VFC_USERNAME=
 VFC_PASSWORD=
 
 # SDNC
 
-SDNC_HOST=sdnc-sim
-SDNC_PORT=6668
-SDNC_CONTEXT_URI=
+SDNC_HOST=
+SDNC_PORT=
+SDNC_CONTEXT_URI=restconf/operations/
 SDNC_USERNAME=
 SDNC_PASSWORD=
