--- a/csit/config/clamp/AcRuntimeParameters.yaml
+++ b/csit/config/clamp/AcRuntimeParameters.yaml
@@ -32,6 +32,8 @@ security:
 
 server:
   port: 6969
+  ssl:
+    enabled: false
   servlet:
     context-path: /onap/policy/clamp/acm
   error:
@@ -52,17 +54,18 @@ runtime:
           - ${topicServer:message-router}
         topicCommInfrastructure: dmaap
         fetchTimeout: 15000
-        useHttps: true
+        useHttps: false
     topicSinks:
       -
         topic: POLICY-ACRUNTIME-PARTICIPANT
         servers:
           - ${topicServer:message-router}
         topicCommInfrastructure: dmaap
-        useHttps: true
+        useHttps: false
 
 management:
   endpoints:
     web:
+      base-path: /
       exposure:
         include: health, metrics, prometheus
