--- a/csit/config/clamp/ClampBackend.properties
+++ b/csit/config/clamp/ClampBackend.properties
@@ -44,11 +44,11 @@
 ### HTTPS Example:
 ### --------------
 ### server.port=8443
-server.ssl.key-store=file:/opt/policy/clamp/policy-keystore
-server.ssl.key-store-password=enc:qWxBtY7w9h5Hl72vQKgI5G1qqyRIuBarQqMkVDHqZmd
-server.ssl.key-password=enc:qWxBtY7w9h5Hl72vQKgI5G1qqyRIuBarQqMkVDHqZmd
-server.ssl.key-store-type=jks
-server.port=8443
+#server.ssl.key-store=file:/opt/policy/clamp/policy-keystore
+#server.ssl.key-store-password=enc:qWxBtY7w9h5Hl72vQKgI5G1qqyRIuBarQqMkVDHqZmd
+#server.ssl.key-password=enc:qWxBtY7w9h5Hl72vQKgI5G1qqyRIuBarQqMkVDHqZmd
+#server.ssl.key-store-type=jks
+server.port=8445
 ## Config part for Server certificates
 # Can be a classpath parameter instead of file:/
 #server.ssl.key-store=classpath:/clds/aaf/org.onap.clamp.p12
@@ -56,22 +56,22 @@ server.port=8443
 #server.ssl.key-password=enc:YZs7M6IftyPjHniTa6J7G2416hssb8qI-Av8D1b8pPS
 
 ## Config part for Client certificates
-server.ssl.client-auth=want
+#server.ssl.client-auth=want
 #server.ssl.trust-store=classpath:/clds/aaf/truststoreONAPall.jks
 #server.ssl.trust-store-password=enc:iDnPBBLq_EMidXlMa1FEuBR8TZzYxrCg66vq_XfLHdJ
-server.ssl.trust-store=file:/opt/policy/clamp/policy-truststore
-server.ssl.trust-store-password=enc:qWxBtY7w9h5Hl72vQKgI5G1qqyRIuBarQqMkVDHqZmd
+#server.ssl.trust-store=file:/opt/policy/clamp/policy-truststore
+#server.ssl.trust-store-password=enc:qWxBtY7w9h5Hl72vQKgI5G1qqyRIuBarQqMkVDHqZmd
 
 # The key file used to decode the key store and trust store password
 # If not defined, the key store and trust store password will not be decrypted
 #clamp.config.keyFile=classpath:/clds/aaf/org.onap.clamp.keyfile
-clamp.config.keyFile=file:/opt/policy/clamp/clamp-be-keyfile
+#clamp.config.keyFile=file:/opt/policy/clamp/clamp-be-keyfile
 
-#server.http-to-https-redirection.port=8080
+server.http-to-https-redirection.port=8080
 
 server.servlet.context-path=/
 #Modified engine-rest applicationpath
-spring.profiles.active=clamp-default,clamp-default-user,clamp-sdc-controller,clamp-ssl-config,clamp-policy-controller,default-dictionary-elements
+spring.profiles.active=clamp-default,clamp-default-user,clamp-policy-controller,default-dictionary-elements
 spring.http.converters.preferred-json-mapper=gson
 
 #The max number of active threads in this pool
@@ -134,10 +134,10 @@ async.max.pool.size=20
 async.queue.capacity=500
 
 #For logback file
-#clamp.config.logback.path=
-clamp.config.logback.filename=logback-default.xml
+clamp.config.logback.path=/opt/policy/clamp/config
+clamp.config.logback.filename=logback.xml
 #The log folder that will be used in logback.xml file
-clamp.config.log.path=/var/log/onap/clamp
+clamp.config.log.path=/var/log/onap/policy/clamp
 clamp.config.files.systemProperties=classpath:/system.properties
 clamp.config.files.cldsUsers=classpath:/clds/clds-users.json
 clamp.config.files.globalProperties=classpath:/clds/templates/globalProperties.json
@@ -148,10 +148,10 @@ clamp.config.httpclient.connectTimeout=10000
 
 #
 # Configuration Settings for Policy Engine Components
-clamp.config.policy.api.url={{PROTOCOL}}${POLICY_API_HOST}:6969
+clamp.config.policy.api.url=http://${POLICY_API_HOST}:6969
 clamp.config.policy.api.userName=policyadmin
 clamp.config.policy.api.password=zb!XztG34
-clamp.config.policy.pap.url={{PROTOCOL}}${POLICY_PAP_HOST}:6969
+clamp.config.policy.pap.url=http://${POLICY_PAP_HOST}:6969
 clamp.config.policy.pap.userName=policyadmin
 clamp.config.policy.pap.password=zb!XztG34
 
@@ -160,12 +160,12 @@ clamp.config.policy.pap.password=zb!XztG34
 clamp.config.sdc.csarFolder = /tmp/sdc-controllers
 
 #DCAE Inventory Url Properties
-clamp.config.dcae.inventory.url={{PROTOCOL}}localhost:8085
+clamp.config.dcae.inventory.url=http://localhost:8085
 clamp.config.dcae.intentory.retry.interval=10000
 clamp.config.dcae.intentory.retry.limit=5
 
 #DCAE Deployment Url Properties
-clamp.config.dcae.deployment.url={{PROTOCOL}}localhost:8085
+clamp.config.dcae.deployment.url=http://localhost:8085
 clamp.config.dcae.deployment.userName=test
 clamp.config.dcae.deployment.password=test
 
@@ -187,11 +187,11 @@ clamp.config.tosca.converter.default.datatypes=classpath:/clds/tosca-converter/d
 clamp.config.tosca.converter.dictionary.support.enabled=true
 
 # Configuration settings for CDS
-clamp.config.cds.url={{PROTOCOL}}cds-blueprints-processor-http:8080
+clamp.config.cds.url=http://cds-blueprints-processor-http:8080
 clamp.config.cds.userName=ccsdkapps
 clamp.config.cds.password=ccsdkapps
 
 # Configuration settings for ControlLoop Runtime Rest API
-clamp.config.acm.runtime.url={{PROTOCOL}}${RUNTIME_HOST}:6969
+clamp.config.acm.runtime.url=http://${RUNTIME_HOST}:6969
 clamp.config.acm.runtime.userName=runtimeUser
 clamp.config.acm.runtime.password=zb!XztG34
