--- a/csit/config/clamp/KubernetesParticipantParameters.yaml
+++ b/csit/config/clamp/KubernetesParticipantParameters.yaml
@@ -26,14 +26,14 @@ participant:
             - ${topicServer:message-router}
           topicCommInfrastructure: dmaap
           fetchTimeout: 15000
-          useHttps: true
+          useHttps: false
       topicSinks:
         -
           topic: POLICY-ACRUNTIME-PARTICIPANT
           servers:
             - ${topicServer:message-router}
           topicCommInfrastructure: dmaap
-          useHttps: true
+          useHttps: false
 
 management:
   endpoints:
@@ -41,7 +41,9 @@ management:
       exposure:
         include: health, metrics, prometheus
 server:
-  port: 8083
+  port: 6969
+  ssl:
+    enabled: false
   servlet:
     context-path: /onap/policy/clamp/acm/k8sparticipant
 
